changed logo for experience. fixed issue with wrong color on nav logo

--- a/css/styles.css
+++ b/css/styles.css
@@ -191,8 +191,7 @@ img {
 
 .nav__logo,
 .nav__logo .nav__toggle {
-  color: #000;
-  columns: var(--title-color);
+  color: var(--title-color);
   font-weight: var(--font-medium);
 }
 
